[gd_scene load_steps=4 format=3 uid="uid://bi0ts50s5a0m0"]

[ext_resource type="Script" uid="uid://c8cslwt4pkj56" path="res://Scripts/UI/RightPanel/wiggle_sprite.gd" id="1_00ydi"]
[ext_resource type="PackedScene" uid="uid://clxl1gighe78l" path="res://UI/BetterSlider/better_slider.tscn" id="2_dcw28"]
[ext_resource type="Script" uid="uid://dy1cd6xda1pu5" path="res://UI/BetterSlider/BetterToggles.gd" id="3_ru4gk"]

[node name="WiggleSpritePanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="WiggleSprite" type="Node" parent="."]
script = ExtResource("1_00ydi")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "TR_FOLLOW_APPENDAGE_TIP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="FollowWiggleAppTip" type="CheckBox" parent="Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "TR_FOLLOW_APPENDAGE"

[node name="HBox34" type="HBoxContainer" parent="Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TipLabel" type="Label" parent="Grid/HBox34"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "TR_FAT_POINT"

[node name="TipSpin" type="SpinBox" parent="Grid/HBox34"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="FollowAllRange" type="CheckBox" parent="Grid"]
layout_mode = 2
tooltip_text = "Follows the Appendage movement direction no matter its current base Angle."
theme_override_font_sizes/font_size = 14
text = "Follow all Range"
script = ExtResource("3_ru4gk")
sp_type = ""
value_to_update = "follow_range"

[node name="StrngthBSlider" parent="Grid" instance=ExtResource("2_dcw28")]
unique_name_in_owner = true
layout_mode = 2
sp_type = ""
label_text = "TR_STRENGTH"
mini_value = 0.001
max_value = 1.0
step = 0.001
ui_type = 1
value_to_update = "follow_strength"

[node name="ThresholdBSlider" parent="Grid" instance=ExtResource("2_dcw28")]
unique_name_in_owner = true
layout_mode = 2
sp_type = ""
label_text = "TR_ROT_THRESH"
max_value = 10.0
ui_type = 1
value_to_update = "rotation_threshold"

[node name="MiniFWBSlider" parent="." instance=ExtResource("2_dcw28")]
unique_name_in_owner = true
visible = false
layout_mode = 2
sp_type = ""
label_text = "TR_MIN_ROTATION_LABEL"
mini_value = -360.0
step = 0.5
value_to_update = "follow_wa_mini"

[node name="MaxFWBSlider" parent="." instance=ExtResource("2_dcw28")]
unique_name_in_owner = true
visible = false
layout_mode = 2
sp_type = ""
label_text = "TR_MAX_ROTATION_LABEL"
max_value = 360.0
step = 0.5
value_to_update = "follow_wa_max"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="MaxFWBSlider2" parent="." instance=ExtResource("2_dcw28")]
unique_name_in_owner = true
visible = false
layout_mode = 2
sp_type = ""
label_text = "TR_MAX_ROTATION_LABEL"
max_value = 360.0
step = 0.5
value_to_update = "follow_wa_max"

[node name="WiggleStuff" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 9

[node name="Label2" type="Label" parent="WiggleStuff"]
layout_mode = 2
text = "TR_WIGGLE_SPRITE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid" type="GridContainer" parent="WiggleStuff"]
layout_mode = 2
columns = 2

[node name="WiggleCheck" type="CheckBox" parent="WiggleStuff/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_WIGGLE_SPRITE"

[node name="WigglePhysicsCheck" type="CheckBox" parent="WiggleStuff/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_WIGGLE_PHYSICS"
script = ExtResource("3_ru4gk")
sp_type = "Sprite2D"
value_to_update = "wiggle_physics"

[node name="FollowParentEffect" type="CheckBox" parent="WiggleStuff/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_WS_SYNC_EFFECT_TOOLTIP"
theme_override_font_sizes/font_size = 16
text = "TR_SYNC_EFFECT"

[node name="Grid2" type="GridContainer" parent="WiggleStuff"]
layout_mode = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WiggleStuff/Grid2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XoffsetLabel" type="Label" parent="WiggleStuff/Grid2/HBoxContainer"]
custom_minimum_size = Vector2(93, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "TR_X_OFFSET"

[node name="XoffsetSpinBox" type="SpinBox" parent="WiggleStuff/Grid2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -999999.0
max_value = 999999.0
step = 0.1

[node name="HBox" type="HBoxContainer" parent="WiggleStuff/Grid2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="YoffsetLabel" type="Label" parent="WiggleStuff/Grid2/HBox"]
custom_minimum_size = Vector2(93, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "TR_Y_OFFSET"

[node name="YoffsetSpinBox" type="SpinBox" parent="WiggleStuff/Grid2/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -999999.0
max_value = 999999.0
step = 0.1

[node name="WiggleAmpBSlider" parent="WiggleStuff" instance=ExtResource("2_dcw28")]
unique_name_in_owner = true
layout_mode = 2
sp_type = "Sprite2D"
label_text = "TR_WS_WIGGLE_AMP"
mini_value = -50.0
max_value = 50.0
step = 0.01
value_to_update = "wiggle_amp"

[node name="WiggleFreqBSlider" parent="WiggleStuff" instance=ExtResource("2_dcw28")]
unique_name_in_owner = true
layout_mode = 2
sp_type = "Sprite2D"
label_text = "TR_WS_WIGGLE_FREQUENCY"
mini_value = -10.0
max_value = 10.0
step = 0.01
value_to_update = "wiggle_freq"

[connection signal="toggled" from="Grid/FollowWiggleAppTip" to="WiggleSprite" method="_on_follow_wiggle_app_tip_toggled"]
[connection signal="value_changed" from="Grid/HBox34/TipSpin" to="WiggleSprite" method="_on_tip_spin_value_changed"]
[connection signal="toggled" from="WiggleStuff/Grid/WiggleCheck" to="WiggleSprite" method="_on_wiggle_check_toggled"]
[connection signal="toggled" from="WiggleStuff/Grid/FollowParentEffect" to="WiggleSprite" method="_on_follow_parent_effect_toggled"]
[connection signal="value_changed" from="WiggleStuff/Grid2/HBoxContainer/XoffsetSpinBox" to="WiggleSprite" method="_on_xoffset_spin_box_value_changed"]
[connection signal="value_changed" from="WiggleStuff/Grid2/HBox/YoffsetSpinBox" to="WiggleSprite" method="_on_yoffset_spin_box_value_changed"]
